[package]
name = "rush"
version = "0.0.1"
repository = "https://github.com/kayru/rush-rs"
authors = ["Yuriy O'Donnell <yuriyo@gmail.com>"]
description = "High level bindings for librush graphics prototyping framework"
categories = ["graphics-api"]
license = "MIT"

[dependencies.rush-sys]
path = "rush-sys/"
version = "0.0.1"

[dependencies]
bitflags = "1.2.1"
