[package]
name = "rush-rs"
version = "0.0.2-alpha.2"
repository = "https://github.com/kayru/rush-rs"
authors = ["Yuriy O'Donnell <yuriyo@gmail.com>"]
description = "High level bindings for librush graphics prototyping framework"
categories = ["rendering"]
license = "MIT"

[dependencies.rush-sys]
path = "rush-sys/"
version = "0.0.2-alpha.3"

[dependencies]
bitflags = "1.2.1"
